--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "server/index.js",
   "dependencies": {
     "axios": "^0.22.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
-    "underscore": "^1.13.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
