--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "newrelic": "^8.6.0",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
     "supertest": "^6.1.6",
